# misa-akmc

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  config.cmake  dependency.cmake  pkg.yaml  version.cmake
.chglog/: config.yml
examples/: config.yaml  vincent-06-config.yaml
models/: CMakeLists.txt
models/abvi/: abvi_model.cpp  abvi_model.h  box.cpp  box.h  env.cpp  env.h  event.h  kmc.cpp  kmc.h  orientation.cc  orientation.h  recombine.cpp  recombine.h
models/abvi/defect/: def_types.h  defect.hpp  itl_list.cpp  itl_list.h  vacancy_list.cpp  vacancy_list.h
models/abvi/plugin/: event_listener.h
models/abvi/rate/: itl_rates_solver.cpp  itl_rates_solver.h  rates_solver.cpp  rates_solver.h  rates_types.h  vacancy_rates_solver.cpp  vacancy_rates_solver.h
models/abvi/rate/bonds/: bonds_counter.cpp  bonds_counter.h  energy_dumbbell.cpp  energy_dumbbell.h  pair_bond.hpp
profile_serial/: CMakeLists.txt  m_event_listener.h  main.cpp
profiles/: .gitignore  CMakeLists.txt  config_parsing.cpp  config_parsing.h  config_values.cpp  config_values.h  device.h  ghost_packer.cpp  ghost_packer.h  lattice_types_string.cpp  lattice_types_string.h  m_event_hook.cpp  m_event_hook.h  m_event_listener.cpp  m_event_listener.h  main.cpp  pkmc.cpp  pkmc.h  profile.cpp  profile_config.h.in  seed_relocate.h  simulation.cpp  simulation.h
profiles/config/: config_parsing.cpp  config_parsing.h  config_values.cpp  config_values.h  lattice_types_string.cpp  lattice_types_string.h
profiles/io/: lattice_dump.cpp  lattice_dump.h
serial/: CMakeLists.txt  env.h  kmc.h
serial/defect/: defect.hpp
serial/lattice/: lattice.cpp  normal_lattice_list.cpp
serial/rate/bonds/: energy_dumbbell.cpp  energy_dumbbell.h
serial/utils/random/: rand_generators.h
src/: .gitignore  CMakeLists.txt  atom.cpp  atom.h  atom_list.cpp  atom_list.h  box.cpp  box.h  building_config.in  configure.cmake  counter.cpp  counter.h  creation.cpp  creation.h  direction.cc  direction.h  env.h  event.h  itl_list.cpp  itl_list.h  kmc.cpp  kmc.h  lattice.cpp  lattice.h  lattice_types.cpp  lattice_types.h  lattices_list.cpp  lattices_list.h  macros.h  main.cpp  orientation.cc  orientation.h  rates.cpp  rates.h  rates_updater.cpp  rates_updater.h  recombine.cpp  simulation.cpp  simulation.h  type_define.h  (+2 more)
src/algorithms/: lattice_region_packer.h  parallel_interface.cpp  parallel_interface.h  ring.hpp  ring_iterator.h  ring_iterator.inc  selector.h
src/algorithms/sl/: comm_dirs.h  sublattice.cpp  sublattice.h  sublattice.inl
src/defect/: def_types.h  defect.hpp  itl_list.cpp  itl_list.h  vacancy_list.cpp  vacancy_list.h
src/hook/: event_hooks.hpp
src/lattice/: lattice.cpp  lattice.h  lattice_list_meta.cpp  lattice_list_meta.h  lattice_types.cpp  lattice_types.h  lattices_list.cpp  lattices_list.h  normal_lattice_list.cpp  normal_lattice_list.h  period_lattice_list.cpp  period_lattice_list.h  pure_lattice_list.cpp  pure_lattice_list.h
src/models/: model_adapter.cpp  model_adapter.h
src/models/abvi/: abvi_model.cpp  abvi_model.h
src/pack/: ghost_init_packer.cpp  ghost_init_packer.h  ghost_sync_packer.cpp  ghost_sync_packer.h  packer_instance.cpp  packer_instance.h  sim_sync_packer.cpp  sim_sync_packer.h
src/plugin/: event_listener.h
src/rate/: itl_rates_solver.cpp  itl_rates_solver.h  rates_solver.cpp  rates_solver.h  rates_types.h  vacancy_rates_solver.cpp  vacancy_rates_solver.h
src/rate/bonds/: bonds_counter.cpp  bonds_counter.h  energy_dumbbell.cpp  energy_dumbbell.h  pair_bond.hpp
src/utils/: macros.h  mpi_types.cpp  mpi_types.h  simulation_domain.cpp  simulation_domain.h
src/utils/random/: rand_generators.cpp  rand_generators.h  random.cpp  random.h  rng_type.h
tests/: .gitignore  CMakeLists.txt
tests/unit/: CMakeLists.txt  atom_list_test.cpp  atom_type_test.cpp  counter_test.cpp  creation_test.cpp  domain_test_fixtures.h  itl_test.cpp  lattice_list_status_test.cpp  lattice_types_test.cpp  lattices_list_test.cpp  main.cpp  orientation_test.cpp  unit_test_config.h.in
tests/unit-abvi/: CMakeLists.txt  event_perform_test.cpp  itl_test.cpp  orientation_test.cpp
tests/unit-abvi/defect/: itl_rates_test.cpp
tests/unit-abvi/rate/: vac_rates_solver_test.cpp
tests/unit-abvi/rate/bonds/: bonds_counter_test.cpp
tests/unit-serial/: CMakeLists.txt  itl_test.cpp  lattices_list_test.cpp  orientation_test.cpp
tests/unit-serial/defect/: itl_rates_test.cpp
tests/unit-tools/: CMakeLists.txt  particle_test.cpp
tests/unit/algorithms/: ring_test.cpp  sub_lattice_test.cpp
tests/unit/defect/: itl_rates_test.cpp
tests/unit/lattice/: lattice_types_test.cpp  lattices_list_with_ghost_test.cpp
tests/unit/pack/: ghost_init_packer_test.cpp  sim_sync_packer_test.cpp
tests/unit/rate/: vac_rates_solver_test.cpp
tests/unit/rate/bonds/: bonds_counter_test.cpp
tests/unit/utils/: mpi_data_types_test.cpp
tools/: CMakeLists.txt  ans.cpp  ans.h  main.cpp  particle.h  xyz_reader.cpp  xyz_reader.h
